--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ssr-csr",
+  "name": "dead-simple-spa-ssr-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,17 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "live-server": "^1.2.2",
     "nodemon": "^3.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18"
+    "@types/express": "^4.17.21"
   }
 }
